# faas-api

./: requirements.txt  setup.cfg  tox.ini
cloudframe/api/: flask_app.py  grpc_service.py
cloudframe/cmd/: faas_manager.py  worker.py
cloudframe/common/: config.py  exception.py  http_rpc.py  rpc.py  utils.py
cloudframe/driver/: docker.py  docker_api.py
cloudframe/manager/: function.py  manager.py  scheduler.py
cloudframe/protos/: data.proto  data_pb2.py  function_pb2_grpc.py  heartbeat.proto  heartbeat_pb2.py  heartbeat_pb2_grpc.py  worker.proto  worker_pb2.py  worker_pb2_grpc.py
cloudframe/tests/api/: base.py  test_flask.py
cloudframe/tests/common/: test_faas_config.py  test_host_config.py
cloudframe/tests/manager/: test_manager.py
config/: docker_host.conf  faas.yaml
