[metadata]
name = restframe
summary = PaaS REST Frame 
description-file =
    README.rst
author = ICT-PaaS
author-email = ict-paas-dev@zte.com
home-page = http://www.ict-paas.org/
classifier =
    Environment :: ICT-PaaS 
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = restframe

[entry_points]
console_scripts =
    restframe-dbsync = restframe.cmd.dbsync:main
    restframe-worker = restframe.cmd.worker:main

[pbr]
autodoc_index_modules = True


[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 1
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = restframe/locale
domain = restframe

[update_catalog]
domain = restframe
output_dir = restframe/locale
input_file = restframe/locale/cloudframe.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = restframe/locale/restframe.pot

[wheel]
universal = 1
